Temporary horrible design...

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -9,10 +9,12 @@
 		<link rel="stylesheet" href="css/page.css"></link>
 	</head>
 	<body>
-		<div class="container">
-			<ng-view></ng-view>
+		<div class="centerbox" id="header">
+			<img src="media/logo.png" style="height:300px" />
 		</div>
-
+		
+		<ng-view></ng-view>
+		
 		<script type="text/javascript" src="lib/jquery.min.js"></script>
 		<script type="text/javascript" src="lib/bootstrap.min.js"></script>
 		<script type="text/javascript" src="lib/angular.js"></script>
