Added support for slider

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>KiB</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css"></link>
+		<link rel="stylesheet" href="css/angular-carousel.min.css"></link>
+		
 		<link rel="stylesheet" href="css/page.css"></link>
 	</head>
 	<body>
@@ -20,6 +22,8 @@
 		<script type="text/javascript" src="lib/angular.js"></script>
 		<script type="text/javascript" src="lib/angular-route.js"></script>
 		<script type="text/javascript" src="lib/angular-resource.js"></script>	
+		<script type="text/javascript" src="lib/angular-touch.min.js"></script>	
+		<script type="text/javascript" src="lib/angular-carousel.min.js"></script>
 	
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
