--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -9,13 +9,40 @@
 		<link rel="stylesheet" href="css/angular-carousel.min.css"></link>
 		
 		<link rel="stylesheet" href="css/page.css"></link>
+		<link rel="stylesheet" href="css/menu.css"></link>
+		<link rel="stylesheet" href="css/slide.css"></link>
 	</head>
 	<body>
 		<div class="centerbox" id="header">
-			<img src="media/logo.png" style="height:300px" />
+			<img src="media/logo.png" style="height:150px; float:left;"></img>
+			
+			<img src="media/logo-text.png" style="vertical-align:center;"></img>
+			
+			<img src="media/logo.png" style="height:150px; float:right;"></img>
+			<div style="clear:both;"></div>
+		</div>
+		
+		<div class="widebox" id="menubarcontainer">
+			<div class="centerbox" id="menubar">
+				<ul>
+					<li>
+						<a href="#/gallery">Bildgalleri</a>
+					</li>
+					<li>
+						<a href="#/events">Eventkalender</a>
+					</li>
+					<li>
+						<a href="#/forum">Forum</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 		
 		<ng-view></ng-view>
+		
+		<div class="widebox" id="footer">
+			
+		</div>
 		
 		<script type="text/javascript" src="lib/jquery.min.js"></script>
 		<script type="text/javascript" src="lib/bootstrap.min.js"></script>
