Footer and socialmedia stuff

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -40,8 +40,16 @@
 		
 		<ng-view></ng-view>
 		
-		<div class="widebox" id="footer">
-			
+		<div class="widebox" id="footercontainer">
+			<div class="centerbox" id="footercontent">
+				<p>Bridgens hus, Borlänge. (Ekorrstigen 5)</p>
+				
+				<a href="#">
+					<img class="socialmediaimage" src="media/facebook.png"></img>
+				</a>
+					
+				<div class="clear:both;"></div>
+			</div>
 		</div>
 		
 		<script type="text/javascript" src="lib/jquery.min.js"></script>
