--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="css/page.css"></link>
 		<link rel="stylesheet" href="css/menu.css"></link>
 		<link rel="stylesheet" href="css/slide.css"></link>
+		<link rel="stylesheet" href="css/footer.css"></link>
 	</head>
 	<body>
 		<div class="centerbox" id="header">
@@ -19,7 +20,7 @@
 			<img src="media/logo-text.png" style="vertical-align:center;"></img>
 			
 			<img src="media/logo.png" style="height:150px; float:right;"></img>
-			<div style="clear:both;"></div>
+			<div class="clear"></div>
 		</div>
 		
 		<div class="widebox" id="menubarcontainer">
@@ -38,7 +39,9 @@
 			</div>
 		</div>
 		
-		<ng-view></ng-view>
+		<div class="page-wrap">
+			<ng-view></ng-view>
+		</div>
 		
 		<div class="widebox" id="footercontainer">
 			<div class="centerbox" id="footercontent">
@@ -48,7 +51,7 @@
 					<img class="socialmediaimage" src="media/facebook.png"></img>
 				</a>
 					
-				<div class="clear:both;"></div>
+				<div class="clear"></div>
 			</div>
 		</div>
 		
