--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -14,32 +14,35 @@
 		<link rel="stylesheet" href="css/footer.css"></link>
 	</head>
 	<body>
-		<div class="centerbox" id="header">
-			<img src="media/logo.png" style="height:150px; float:left;"></img>
-			
-			<img src="media/logo-text.png" style="vertical-align:center;"></img>
-			
-			<img src="media/logo.png" style="height:150px; float:right;"></img>
-			<div class="clear"></div>
-		</div>
-		
-		<div class="widebox" id="menubarcontainer">
-			<div class="centerbox" id="menubar">
-				<ul>
-					<li>
-						<a href="#/gallery">Bildgalleri</a>
-					</li>
-					<li>
-						<a href="#/events">Eventkalender</a>
-					</li>
-					<li>
-						<a href="#/forum">Forum</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-		
 		<div class="page-wrap">
+			<div class="centerbox" id="header">
+				<img src="media/logo.png" style="height:150px; float:left;"></img>
+				
+				<a href="#/">
+					<img src="media/logo-text.png" style="vertical-align:center;"></img>
+				</a>
+				
+				<img src="media/logo.png" style="height:150px; float:right;"></img>
+				<div class="clear"></div>
+			</div>
+			
+			<div class="widebox" id="menubarcontainer">
+				<div class="centerbox" id="menubar">
+					<ul>
+						<li>
+							<a href="#/gallery">Bildgalleri</a>
+						</li>
+						<li>
+							<a href="#/events">Eventkalender</a>
+						</li>
+						<li>
+							<a href="#/forum">Forum</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		
+		
 			<ng-view></ng-view>
 		</div>
 		
