Tweaked the forum theme to fit the page layout

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -36,7 +36,7 @@
 							<a href="#/events">Eventkalender</a>
 						</li>
 						<li>
-							<a href="#/forum">Forum</a>
+							<a href="/phpBB3">Forum</a>
 						</li>
 					</ul>
 				</div>
