Clicking the logo should take the user back to start

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="page-wrap">
 			<div class="centerbox" id="header">
-				<img src="media/new-logo.jpg" style="height:148px;"></img>
+				<a href="#/"><img src="media/new-logo.jpg" style="height:148px;"/></a>
 			</div>
 			
 			<div class="widebox" id="menubarcontainer">
