Added "page" page

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -67,6 +67,8 @@
 		<script type="text/javascript" src="lib/angular-carousel.min.js"></script>
 	
 		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/kibservice.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
+		<script type="text/javascript" src="controllers/pagePageController.js"></script>
 	</body>
 </html>	
