--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -7,11 +7,11 @@
 		<title>KiB</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="css/angular-carousel.min.css"></link>
-		
+
 		<link rel="stylesheet" href="css/page.css"></link>
 		<link rel="stylesheet" href="css/menu.css"></link>
 		<link rel="stylesheet" href="css/slide.css"></link>
-		<link rel="stylesheet" href="css/footer.css"></link>
+		<link rel="stylesheet" href="css/footer.css"></link>	
 	</head>
 	<body>
 		<div class="page-wrap">
@@ -58,6 +58,7 @@
 			</div>
 		</div>
 		
+		<script type="text/javascript" src="ckeditor/ckeditor.js"></script>
 		<script type="text/javascript" src="lib/jquery.min.js"></script>
 		<script type="text/javascript" src="lib/bootstrap.min.js"></script>
 		<script type="text/javascript" src="lib/angular.js"></script>
@@ -66,9 +67,12 @@
 		<script type="text/javascript" src="lib/angular-touch.min.js"></script>	
 		<script type="text/javascript" src="lib/angular-carousel.min.js"></script>
 	
+		<script type="text/javascript" src="admin/admin.js"></script>	
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/kibservice.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
 		<script type="text/javascript" src="controllers/pagePageController.js"></script>
+		
+		<script type="text/javascript" src="admin/controllers/adminPagePageController.js"></script>
 	</body>
 </html>	
