--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -70,6 +70,7 @@
 		<script type="text/javascript" src="admin/admin.js"></script>	
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/kibservice.js"></script>
+		<script type="text/javascript" src="admin/js/adminservice.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
 		<script type="text/javascript" src="controllers/pagePageController.js"></script>
 		
