--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -75,5 +75,6 @@
 		<script type="text/javascript" src="controllers/pagePageController.js"></script>
 		
 		<script type="text/javascript" src="admin/controllers/adminPagePageController.js"></script>
+		<script type="text/javascript" src="admin/controllers/adminListPageController.js"></script>
 	</body>
 </html>	
