Included event page controller

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -72,6 +72,7 @@
 		<script type="text/javascript" src="js/kibservice.js"></script>
 		<script type="text/javascript" src="admin/js/adminservice.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
+		<script type="text/javascript" src="controllers/eventPageController.js"></script>
 		<script type="text/javascript" src="controllers/pagePageController.js"></script>
 		
 		<script type="text/javascript" src="admin/controllers/adminPagePageController.js"></script>
