--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -73,6 +73,7 @@
 		<script type="text/javascript" src="admin/js/adminservice.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
 		<script type="text/javascript" src="controllers/eventPageController.js"></script>
+		<script type="text/javascript" src="controllers/galleryPageController.js"></script>
 		<script type="text/javascript" src="controllers/pagePageController.js"></script>
 		
 		<script type="text/javascript" src="admin/controllers/adminPagePageController.js"></script>
