--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/menu.css"></link>
 		<link rel="stylesheet" href="css/slide.css"></link>
 		<link rel="stylesheet" href="css/footer.css"></link>	
+		<link rel="stylesheet" href="css/gallery.css"></link>
 	</head>
 	<body>
 		<div class="page-wrap">
