--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -65,6 +65,7 @@
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/kibservice.js"></script>
 		<script type="text/javascript" src="admin/js/adminservice.js"></script>
+		<script type="text/javascript" src="js/galleryRowDirective.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
 		<script type="text/javascript" src="controllers/eventPageController.js"></script>
 		<script type="text/javascript" src="controllers/galleryPageController.js"></script>
