Added single logo layout to index

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -16,14 +16,7 @@
 	<body>
 		<div class="page-wrap">
 			<div class="centerbox" id="header">
-				<img src="media/logo.png" style="height:150px; float:left;"></img>
-				
-				<a href="#/">
-					<img src="media/logo-text.png" style="vertical-align:center;"></img>
-				</a>
-				
-				<img src="media/logo.png" style="height:150px; float:right;"></img>
-				<div class="clear"></div>
+				<a href="/kib-web/pageroot/#/"><img src="/kib-web/pageroot/media/new-logo.jpg" style="height:148px;"/></a>
 			</div>
 			
 			<div class="widebox" id="menubarcontainer">
