--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -7,7 +7,8 @@
 		<title>KiB</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="css/angular-carousel.min.css"></link>
-
+		<link rel="stylesheet" href="lib/fullcalendar/fullcalendar.min.css"></link>
+		
 		<link rel="stylesheet" href="css/page.css"></link>
 		<link rel="stylesheet" href="css/menu.css"></link>
 		<link rel="stylesheet" href="css/slide.css"></link>
@@ -51,14 +52,17 @@
 			</div>
 		</div>
 		
-		<script type="text/javascript" src="ckeditor/ckeditor.js"></script>
 		<script type="text/javascript" src="lib/jquery.min.js"></script>
+		<script type="text/javascript" src="lib/ckeditor/ckeditor.js"></script>
+		<script type="text/javascript" src="lib/moment.min.js"></script>
+		<script type="text/javascript" src="lib/fullcalendar/fullcalendar.min.js"></script>
 		<script type="text/javascript" src="lib/bootstrap.min.js"></script>
 		<script type="text/javascript" src="lib/angular.js"></script>
 		<script type="text/javascript" src="lib/angular-route.js"></script>
 		<script type="text/javascript" src="lib/angular-resource.js"></script>	
 		<script type="text/javascript" src="lib/angular-touch.min.js"></script>	
 		<script type="text/javascript" src="lib/angular-carousel.min.js"></script>
+		<script type="text/javascript" src="lib/calendar.js"></script>
 	
 		<script type="text/javascript" src="admin/admin.js"></script>	
 		<script type="text/javascript" src="js/app.js"></script>
