--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -57,6 +57,7 @@
 		<script type="text/javascript" src="lib/ckeditor/ckeditor.js"></script>
 		<script type="text/javascript" src="lib/moment.min.js"></script>
 		<script type="text/javascript" src="lib/fullcalendar/fullcalendar.min.js"></script>
+		<script type="text/javascript" src="lib/fullcalendar/lang/sv.js"></script>
 		<script type="text/javascript" src="lib/bootstrap.min.js"></script>
 		<script type="text/javascript" src="lib/angular.js"></script>
 		<script type="text/javascript" src="lib/angular-route.js"></script>
