--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -77,5 +77,7 @@
 		
 		<script type="text/javascript" src="admin/controllers/adminPagePageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminListPageController.js"></script>
+		<script type="text/javascript" src="admin/controllers/adminEventPageController.js"></script>
+		<script type="text/javascript" src="admin/controllers/adminListEventController.js"></script>
 	</body>
 </html>	
