Added auth check/display to admin index

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -77,6 +77,7 @@
 		<script type="text/javascript" src="controllers/galleryPageController.js"></script>
 		<script type="text/javascript" src="controllers/pagePageController.js"></script>
 		
+		<script type="text/javascript" src="admin/controllers/adminIndexPageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminPagePageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminListPageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminEventPageController.js"></script>
