--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="css/angular-carousel.min.css"></link>
 		<link rel="stylesheet" href="lib/fullcalendar/fullcalendar.min.css"></link>
+		<link rel="stylesheet" href="lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css"></link>
 		
 		<link rel="stylesheet" href="css/page.css"></link>
 		<link rel="stylesheet" href="css/menu.css"></link>
@@ -63,6 +64,7 @@
 		<script type="text/javascript" src="lib/fullcalendar/fullcalendar.min.js"></script>
 		<script type="text/javascript" src="lib/fullcalendar/lang/sv.js"></script>
 		<script type="text/javascript" src="lib/bootstrap.min.js"></script>
+		<script type="text/javascript" src="lib/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 		<script type="text/javascript" src="lib/angular.js"></script>
 		<script type="text/javascript" src="lib/angular-route.js"></script>
 		<script type="text/javascript" src="lib/angular-resource.js"></script>	
