Added image upload page, included library

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -70,6 +70,7 @@
 		<script type="text/javascript" src="lib/angular-resource.js"></script>	
 		<script type="text/javascript" src="lib/angular-touch.min.js"></script>	
 		<script type="text/javascript" src="lib/angular-carousel.min.js"></script>
+		<script type="text/javascript" src="lib/angular-file-upload.min.js"></script>
 		<script type="text/javascript" src="lib/calendar.js"></script>
 
 	
@@ -88,5 +89,6 @@
 		<script type="text/javascript" src="admin/controllers/adminListPageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminEventPageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminListEventController.js"></script>
+		<script type="text/javascript" src="admin/controllers/imageUploadPageController.js"></script>
 	</body>
 </html>	
