Styled the upload page

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="css/footer.css"></link>	
 		<link rel="stylesheet" href="css/calendar-custom.css"></link>
 		<link rel="stylesheet" href="css/gallery.css"></link>
+		<link rel="stylesheet" href="css/admin.css"></link>
 	</head>
 	<body>
 		<div class="page-wrap">
