Added background video directive

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -80,6 +80,7 @@
 		<script type="text/javascript" src="js/kibservice.js"></script>
 		<script type="text/javascript" src="admin/js/adminservice.js"></script>
 		<script type="text/javascript" src="js/galleryRowDirective.js"></script>
+		<script type="text/javascript" src="js/bgVideoDirective.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
 		<script type="text/javascript" src="controllers/eventPageController.js"></script>
 		<script type="text/javascript" src="controllers/galleryPageController.js"></script>
