Changed paths to work on dev server

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -34,7 +34,7 @@
 							<a href="#/events">Eventkalender</a>
 						</li>
 						<li>
-							<a href="/phpBB3">Forum</a>
+							<a href="/forum">Forum</a>
 						</li>
 					</ul>
 				</div>
