Added stubs for leagues handling

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -85,6 +85,8 @@
 		<script type="text/javascript" src="controllers/eventPageController.js"></script>
 		<script type="text/javascript" src="controllers/galleryPageController.js"></script>
 		<script type="text/javascript" src="controllers/pagePageController.js"></script>
+		<script type="text/javascript" src="controllers/leagueListPageController.js"></script>
+		<script type="text/javascript" src="controllers/leagueDetailsPageController.js"></script>
 		
 		<script type="text/javascript" src="admin/controllers/adminIndexPageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminPagePageController.js"></script>
