Added chart library
Causes inf-loop... to be fixed

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -75,6 +75,7 @@
 		<script type="text/javascript" src="lib/angular-carousel.min.js"></script>
 		<script type="text/javascript" src="lib/angular-file-upload.min.js"></script>
 		<script type="text/javascript" src="lib/calendar.js"></script>
+		<script type="text/javascript" src="lib/ng-google-chart.js"></script>
 
 	
 		<script type="text/javascript" src="admin/admin.js"></script>	
