Added league report match page with link

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -89,6 +89,7 @@
 		<script type="text/javascript" src="controllers/pagePageController.js"></script>
 		<script type="text/javascript" src="controllers/leagueListPageController.js"></script>
 		<script type="text/javascript" src="controllers/leagueDetailsPageController.js"></script>
+		<script type="text/javascript" src="controllers/leagueReportMatchPageController.js"></script>
 		
 		<script type="text/javascript" src="admin/controllers/adminIndexPageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminPagePageController.js"></script>
