--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="css/gallery.css"></link>
 		<link rel="stylesheet" href="css/league.css"></link>
 		<link rel="stylesheet" href="css/admin.css"></link>
+		<link rel="stylesheet" href="css/loading.css"></link>
 	</head>
 	<body>
 		<div class="page-wrap">
@@ -83,6 +84,7 @@
 		<script type="text/javascript" src="admin/js/adminservice.js"></script>
 		<script type="text/javascript" src="js/galleryRowDirective.js"></script>
 		<script type="text/javascript" src="js/bgVideoDirective.js"></script>
+		<script type="text/javascript" src="js/loadingDirective.js"></script>
 		<script type="text/javascript" src="controllers/startPageController.js"></script>
 		<script type="text/javascript" src="controllers/eventPageController.js"></script>
 		<script type="text/javascript" src="controllers/galleryPageController.js"></script>
