Added auto completion of league match opponent

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -18,6 +18,7 @@
 		<link rel="stylesheet" href="css/league.css"></link>
 		<link rel="stylesheet" href="css/admin.css"></link>
 		<link rel="stylesheet" href="css/loading.css"></link>
+		<link rel="stylesheet" href="css/angucomplete.css"></link>
 	</head>
 	<body>
 		<div class="page-wrap">
@@ -76,7 +77,7 @@
 		<script type="text/javascript" src="lib/angular-file-upload.min.js"></script>
 		<script type="text/javascript" src="lib/calendar.js"></script>
 		<script type="text/javascript" src="lib/ng-google-chart.js"></script>
-
+		<script type="text/javascript" src="lib/angucomplete.js"></script>
 	
 		<script type="text/javascript" src="admin/admin.js"></script>	
 		<script type="text/javascript" src="js/app.js"></script>
