--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 			
-			<div ng-if="unauthorized" class="centerbox alert alert-danger" role="alert" style="display:none;">
+			<div ng-show="unauthorized" ng-cloak class="centerbox alert alert-danger" role="alert" >
 				Du har inte tillåtelse att utföra begärd åtgärd!
 			</div>
 		
