Added link to league page

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -36,6 +36,9 @@
 							<a href="#/events">Eventkalender</a>
 						</li>
 						<li>
+							<a href="#/leagues">Ligor</a>
+						</li>
+						<li>
 							<a href="/forum">Forum</a>
 						</li>
 					</ul>
