Added basic admin league edit functionality

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -103,5 +103,6 @@
 		<script type="text/javascript" src="admin/controllers/adminEventPageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminListEventController.js"></script>
 		<script type="text/javascript" src="admin/controllers/imageUploadPageController.js"></script>
+		<script type="text/javascript" src="admin/controllers/adminLeaguePageController.js"></script>
 	</body>
 </html>	
