Added link to facebook group

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -56,7 +56,7 @@
 			<div class="centerbox" id="footercontent">
 				<p>Bridgens hus, Borlänge. (Ekorrstigen 5)</p>
 				
-				<a href="#">
+				<a href="https://www.facebook.com/groups/416509568397594/" target="_blank">
 					<img class="socialmediaimage" src="media/facebook.png"></img>
 				</a>
 					
