Implemented some rudimentary fluid design stuff

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -2,7 +2,7 @@
 <html ng-app="kibApp">
 	<head>
 	    <meta charset="utf-8">
-		<meta name="viewport" content="width=1050, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>KiB</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="css/angular-carousel.min.css"></link>
@@ -19,6 +19,8 @@
 		<link rel="stylesheet" href="css/admin.css"></link>
 		<link rel="stylesheet" href="css/loading.css"></link>
 		<link rel="stylesheet" href="css/angucomplete.css"></link>
+		
+		<link rel="stylesheet" href="css/overrides.css"></link>
 	</head>
 	<body>
 		<div class="page-wrap">
