Added icons to menu in super narrow mode (<370px)

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -46,6 +46,22 @@
 						</li>
 					</ul>
 				</div>
+				<div id="menubar-narrow">
+					<ul>
+						<li>
+							<a href="#/gallery"><img src="media/menu-gallery.png"/></a>
+						</li>
+						<li>
+							<a href="#/events"><img src="media/menu-calendar.png"/></a>
+						</li>
+						<li>
+							<a href="#/leagues"><img src="media/menu-league.png"/></a>
+						</li>
+						<li>
+							<a href="/forum"><img src="media/menu-forum.png"/></a>
+						</li>
+					</ul>
+				</div>
 			</div>
 			
 			<div ng-show="unauthorized" ng-cloak class="centerbox alert alert-danger" role="alert" >
