Added match admin page

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -129,5 +129,6 @@
 		<script type="text/javascript" src="admin/controllers/adminListEventController.js"></script>
 		<script type="text/javascript" src="admin/controllers/imageUploadPageController.js"></script>
 		<script type="text/javascript" src="admin/controllers/adminLeaguePageController.js"></script>
+		<script type="text/javascript" src="admin/controllers/adminMatchesPageController.js"></script>
 	</body>
 </html>	
