Switched to use bootstrap readahead instead of angucomplete

--- a/pageroot/index.html
+++ b/pageroot/index.html
@@ -10,7 +10,8 @@
 		<link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.min.css"></link>
 		<link rel="stylesheet" href="bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css"></link>
 		<link rel="stylesheet" href="bower_components/angucomplete-alt/angucomplete-alt.css" />
-		
+		<link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" />
+	
 		<link rel="stylesheet" href="css/page.css"></link>
 		<link rel="stylesheet" href="css/menu.css"></link>
 		<link rel="stylesheet" href="css/slide.css"></link>
@@ -94,6 +95,7 @@
 		<script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-carousel/dist/angular-carousel.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-file-upload/angular-file-upload.min.js"></script>
+		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	
 		<script type="text/javascript" src="lib/ng-google-chart.js"></script>
 		<script type="text/javascript" src="lib/ckeditor/ckeditor.js"></script>
