--- a/pageroot/src/index.html
+++ b/pageroot/src/index.html
@@ -32,8 +32,10 @@
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
     <!-- endbower -->
+	  
 	  <script src="thirdparty/ng-google-chart.js"></script>
 	  <script src="thirdparty/ckeditor/ckeditor.js"></script>
+	  <script src="../bower_components/moment/locale/sv.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
