Included swedish language for fullcalendar

--- a/pageroot/src/index.html
+++ b/pageroot/src/index.html
@@ -36,6 +36,7 @@
 	  <script src="thirdparty/ng-google-chart.js"></script>
 	  <script src="thirdparty/ckeditor/ckeditor.js"></script>
 	  <script src="../bower_components/moment/locale/sv.js"></script>
+	  <script src="../bower_components/fullcalendar/dist/lang/sv.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
