Added trailing slashes to links (required for routing)

--- a/pageroot/src/admin/main/main.html
+++ b/pageroot/src/admin/main/main.html
@@ -23,13 +23,13 @@
 			<accordion close-others="false">
 				<accordion-group heading="Pages">
 					<div class="list-group" style="text-align:center;">
-						<a href="#/admin/adminpage" class="list-group-item">Add New Page</a>
+						<a href="#/admin/adminpage/" class="list-group-item">Add New Page</a>
 						<a href="#/admin/listpages" class="list-group-item">Administer pages</a>
 					</div>
 				</accordion-group>
 				<accordion-group heading="Events">
 					<div class="list-group" style="text-align:center;">
-						<a href="#/admin/adminevent" class="list-group-item">Add New Event</a>
+						<a href="#/admin/adminevent/" class="list-group-item">Add New Event</a>
 						<a href="#/admin/listevents" class="list-group-item">Administer Events</a>
 					</div>
 				</accordion-group>
