Removed useless back buttons

--- a/pageroot/src/admin/league/league.template.html
+++ b/pageroot/src/admin/league/league.template.html
@@ -1,16 +1,11 @@
 <div class="textbox" style="margin:20px;">
 	<div class="page-header">
-		<a href="#/admin" class="btn btn-default" style="float:left;">
-			<span class="glyphicon glyphicon-chevron-left"></span> Back
-		</a>
-		
-		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Administer ligor</h1>
-		<div class="clearfix"></div>
+		<h1>Administer ligor</h1>
 	</div>
 	
 	<button class="btn btn-default pull-right clearfix" ng-click="doAdd()">Add new league</button>	
 	
-	<table class="table"">
+	<table class="table">
 		<thead>
 			<tr>
 				<th>
