--- a/pageroot/src/admin/league/matches.template.html
+++ b/pageroot/src/admin/league/matches.template.html
@@ -1,11 +1,6 @@
 <div class="textbox" style="margin:20px;">
 	<div class="page-header">
-		<a href="#/admin" class="btn btn-default" style="float:left;">
-			<span class="glyphicon glyphicon-chevron-left"></span> Back
-		</a>
-		
-		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Administer matches</h1>
-		<div class="clearfix"></div>
+		<h1>Administer matches</h1>
 	</div>
 	
 	<button class="btn btn-default pull-right clearfix" ng-click="doAdd()">Add new match</button>	
