--- a/pageroot/src/admin/events/list-events.template.html
+++ b/pageroot/src/admin/events/list-events.template.html
@@ -1,11 +1,6 @@
 <div class="centerbox">
 	<div class="page-header">
-		<a href="#/admin" class="btn btn-default" style="float:left;">
-			<span class="glyphicon glyphicon-chevron-left"></span> Back
-		</a>
-		
-		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Events in database</h1>
-		<div class="clearfix"></div>
+		<h1>Events in database</h1>
 	</div>
 
 	<a href="#/admin/adminevent" class="btn btn-default" style="float:right;">Add New Event</a>
