--- a/pageroot/src/admin/pages/list-pages.template.html
+++ b/pageroot/src/admin/pages/list-pages.template.html
@@ -1,11 +1,6 @@
 <div class="centerbox">
 	<div class="page-header">
-		<a href="#/admin" class="btn btn-default" style="float:left;">
-			<span class="glyphicon glyphicon-chevron-left"></span> Back
-		</a>
-		
-		<h1 style="padding:0; margin:0; margin-left:20px; float:left;">Pages in database</h1>
-		<div class="clearfix"></div>
+		<h1>Pages in database</h1>
 	</div>
 	
 	<a href="#/admin/adminpage" class="btn btn-default" style="float:right;">Add New Page</a>
