--- a/pageroot/src/admin/league/matches.template.html
+++ b/pageroot/src/admin/league/matches.template.html
@@ -5,7 +5,7 @@
 	
 	<button class="btn btn-default pull-right clearfix" ng-click="doAdd()">Add new match</button>	
 	
-	<table class="table"">
+	<table class="table">
 		<thead>
 			<tr>
 				<th>
