--- a/pageroot/src/admin/tournament/admin.template.html
+++ b/pageroot/src/admin/tournament/admin.template.html
@@ -1,1 +1,37 @@
-Hlel
+<tabset>
+	<tab heading="Players">
+		Add players
+	</tab>
+	<tab ng-repeat="round in rounds" heading="{{round.name}}">
+		<div ng-repeat="matchup in round.matchups" class="panel panel-default">
+  			<div class="panel-heading">
+				{{matchup.table}}
+			</div>
+		  	<div class="panel-body">
+				<form>
+				<div class="container-fluid1">
+					<div class="col-xs-6">
+						<div class="form-group">
+							<label>{{matchup.player1}}</label>
+							<input type="number" ng-model="matchup.player1Score" class="form-control" />
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="form-group">
+							<label>{{matchup.player2}}</label>
+							<input type="number" ng-model="matchup.player2Score" class="form-control" />
+						</div>
+					</div>
+				</div>
+				</form>
+			</div>
+		</div>
+	</tab>
+	<tab select="createNewMatch()" disable="!allMatchesReported()">
+		<tab-heading>
+        	<i class="glyphicon glyphicon-random"></i> Next match 
+      	</tab-heading>
+		
+		Creating matchups please wait...
+	</tab>
+</tabset>
