--- a/pageroot/src/index.html
+++ b/pageroot/src/index.html
@@ -12,7 +12,7 @@
     <!-- bower:css -->
     <!-- run `gulp inject` to automatically populate bower styles dependencies -->
     <!-- endbower -->
-	  <link rel="stylesheet" href="thirdparty/ckeditor/styles.js"></link>
+	  <link rel="stylesheet" type="text/css" href="thirdparty/ckeditor/styles.js"></link>
     <!-- endbuild -->
 
     <!-- build:css({.tmp/serve,src}) styles/app.css -->
