--- a/pageroot/src/admin/tournament/admin.template.html
+++ b/pageroot/src/admin/tournament/admin.template.html
@@ -3,27 +3,29 @@
 		<div ng-include="'admin/tournament/players.template.html'" ng-controller="TournamentPlayersCtrl"></div>
 	</tab>
 	<tab ng-repeat="round in rounds" heading="{{round.name}}">
-		<div ng-repeat="matchup in round.matchups" class="panel panel-default">
-  			<div class="panel-heading">
-				{{matchup.table}}
-			</div>
-		  	<div class="panel-body">
-				<form>
-				<div class="container-fluid1">
-					<div class="col-xs-6">
-						<div class="form-group">
-							<label>{{matchup.player1}}</label>
-							<input type="number" ng-model="matchup.player1Score" class="form-control" />
-						</div>
-					</div>
-					<div class="col-xs-6">
-						<div class="form-group">
-							<label>{{matchup.player2}}</label>
-							<input type="number" ng-model="matchup.player2Score" class="form-control" />
-						</div>
-					</div>
+		<div class="matches-container">
+			<div ng-repeat="matchup in round.matchups" class="panel panel-default">
+				<div class="panel-heading">
+					{{matchup.table}}
 				</div>
-				</form>
+				<div class="panel-body">
+					<form>
+					<div class="container-fluid1">
+						<div class="col-xs-6">
+							<div class="form-group">
+								<label>{{matchup.player1.name}}</label>
+								<input type="number" ng-model="matchup.player1Score" class="form-control" />
+							</div>
+						</div>
+						<div class="col-xs-6">
+							<div class="form-group">
+								<label>{{matchup.player2.name}}</label>
+								<input type="number" ng-model="matchup.player2Score" class="form-control" />
+							</div>
+						</div>
+					</div>
+					</form>
+				</div>
 			</div>
 		</div>
 	</tab>
