Integration with Tournament API

--- a/pageroot/src/admin/tournament/manage.template.html
+++ b/pageroot/src/admin/tournament/manage.template.html
@@ -18,7 +18,7 @@
 	<tr ng-repeat="tournament in tournaments">
 		<td>
 			<div class="btn btn-default btn-xs">
-				<span class="glyphicon glyphicon-folder-open" ng-click="openTournament(tournament.tournamentId)"></span>	
+				<span class="glyphicon glyphicon-folder-open" ng-click="openTournament(tournament.id)"></span>	
 			</div>
 		</td>
 		<td>
