--- a/pageroot/src/admin/tournament/admin.template.html
+++ b/pageroot/src/admin/tournament/admin.template.html
@@ -10,20 +10,25 @@
 				</div>
 				<div class="panel-body">
 					<form>
-					<div class="container-fluid1">
-						<div class="col-xs-6">
-							<div class="form-group">
-								<label>{{matchup.player1.name}}</label>
-								<input type="number" ng-model="matchup.player1Score" class="form-control" />
-							</div>
-						</div>
-						<div class="col-xs-6">
-							<div class="form-group">
-								<label>{{matchup.player2.name}}</label>
-								<input type="number" ng-model="matchup.player2Score" class="form-control" />
-							</div>
-						</div>
-					</div>
+                        <div class="container-fluid1">
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label>{{matchup.player1.name}}</label>
+                                    <input type="number" ng-model="matchup.player1Score" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label>{{matchup.player2.name}}</label>
+                                    <input type="number" ng-model="matchup.player2Score" class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-default pull-right" ng-click="saveScore(matchup)">
+                            Save
+                        </button>
+                        
+                        <div class="clearfix"></div>
 					</form>
 				</div>
 			</div>
