--- a/pageroot/src/admin/tournament/scoreboard.template.html
+++ b/pageroot/src/admin/tournament/scoreboard.template.html
@@ -1,1 +1,18 @@
 <h1>Scoreboard</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Affiliation</th>
+            <th>Score</th>
+        </tr>
+    </thead>
+    <tr ng-repeat="score in tournament.scores">
+        <td></td>
+        <td>{{score.name}}</td>
+        <td>{{score.affiliation}}</td>
+        <td>{{score.score}}</td>    
+    </tr>
+</table>
