--- a/pageroot/src/admin/tournament/manage.template.html
+++ b/pageroot/src/admin/tournament/manage.template.html
@@ -1,7 +1,7 @@
 <div class="page-header clearfix">
 	<h1 class="pull-left">Existing tournaments</h1>
 	
-	<Button class="btn btn-primary pull-right">New tournament</Button> 
+	<Button class="btn btn-primary pull-right" ng-click="doNew()">New tournament</Button> 
 </div>
 
 <table class="table">
