--- a/pageroot/src/admin/tournament/add-edit-tournament.template.html
+++ b/pageroot/src/admin/tournament/add-edit-tournament.template.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
-	<h3 class="modal-title" ng-hide="tournamentId">New tournament</h3>
-	<h3 class="modal-title" ng-show="tournamentId">Edit existing tournament</h3>
+	<h3 class="modal-title" ng-hide="tournament">New tournament</h3>
+	<h3 class="modal-title" ng-show="tournament">Edit existing tournament</h3>
 </div>
 <div class="modal-body">
 	<form>
