--- a/pageroot/src/admin/main/main.html
+++ b/pageroot/src/admin/main/main.html
@@ -18,7 +18,7 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-xs-2">
+		<div class="col-xs-2 hidden-print">
 			<!-- Menu -->
 			<accordion close-others="false">
 				<accordion-group heading="Pages">
