Tabs on contestant info page. Support for pseudo matchups

--- a/pageroot/src/admin/tournament/admin.template.html
+++ b/pageroot/src/admin/tournament/admin.template.html
@@ -18,7 +18,7 @@
                                 </div>
                             </div>
                             <div class="col-xs-6">
-                                <div class="form-group">
+                                <div class="form-group" ng-if="model.player2">
                                     <label>{{matchup.player2.name}}</label>
                                     <input type="number" ng-model="matchup.player2Score" class="form-control" />
                                 </div>
