Set round to public

--- a/pageroot/src/admin/tournament/players.template.html
+++ b/pageroot/src/admin/tournament/players.template.html
@@ -1,4 +1,4 @@
-<div class="well" style="margin-top:10px;">
+<div class="well" style="margin-top:10px;" ng-if="auth.authlevel > 1">
     <h2>Add player to tournament</h2>
     
     <div class="row">
