--- a/pageroot/src/admin/tournament/admin.template.html
+++ b/pageroot/src/admin/tournament/admin.template.html
@@ -1,8 +1,14 @@
-<tabset>
+<tabset ng-if="auth.authlevel > 1">
 	<tab heading="Players">
 		<div ng-include="'admin/tournament/players.template.html'" ng-controller="TournamentPlayersCtrl"></div>
 	</tab>
 	<tab ng-repeat="round in rounds" heading="{{round.name}}">
+        <div ng-if="!round.public" class="alert alert-info">
+            Round not public.
+            <button class="btn btn-primary pull-right" type="button" ng-click="makePublic(round)" style="margin-top:-5px;">
+                Make public
+            </button>
+        </div>   
 		<div class="matches-container">
 			<div ng-repeat="matchup in round.matchups" class="panel panel-default">
 				<div class="panel-heading">
